--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="ic_launcher_background">#13dd7f</color>
+    <color name="ic_launcher_hook_background">#272626</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
