增加jni demo和 jni 生成可执行文件demo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,11 @@
         android:layout_height="48dp"
         android:layout_marginTop="20dp"
         android:text="签名hook" />
+
+    <Button
+        android:id="@+id/btnJni"
+        android:layout_width="100dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
+        android:text="JNI" />
 </LinearLayout>
